--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       color: var(--deep-green);
       overflow-x: hidden;
     }
-    /* Tri Menu */
     #sideMenu {
       position: fixed;
       left: -225px;
@@ -76,7 +75,6 @@
       display: none;
     }
     #menuOverlay.show { display: block; }
-    /* Hamburger Button */
     #menuBtn {
       position: fixed;
       z-index: 5000;
@@ -91,7 +89,6 @@
       box-shadow: 0 2px 8px rgba(30, 90, 46, 0.23);
     }
     #menuBtn:hover { background: var(--accent-dark); }
-    /* Main Title */
     h1 {
       text-align: center;
       margin-top: 2rem;
@@ -175,7 +172,6 @@
     .card-action:hover {
       color: var(--orange);
     }
-    /* MODAL ANIMATIONS & OVERLAYS */
     .modal-backdrop {
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
@@ -187,12 +183,14 @@
       justify-content: center;
       animation: fadein 0.44s cubic-bezier(0.56,2,0.38,1) both;
     }
+    /* MODAL: BIGGER DIALOG IMPROVEMENT */
     .modal-dialog {
       background: #fff;
       border-radius: 18px;
-      padding: 2.3rem 1.8rem 1.5rem 1.8rem;
-      max-width: 400px;
-      width: 96%;
+      padding: 2.7rem 2.5rem 2.2rem 2.5rem;
+      max-width: 480px;
+      min-width: 330px;
+      width: 98%;
       text-align: center;
       box-shadow: 0px 8px 38px rgba(9,161,121,0.13);
       position: relative;
@@ -220,32 +218,31 @@
       box-shadow: 0 2px 10px #f9ac1d10;
     }
     .lang-btn:hover, .action-btn:hover { background: linear-gradient(90deg,var(--accent),var(--orange)); transform: scale(1.06);}
+    /* INPUT FIELD IMPROVED */
     .input-row{margin-bottom:1.1rem; text-align:left;}
     .input-label{display:block; margin-bottom:0.43rem; color:var(--accent-dark); font-weight:600;}
-    .input-field{width:100%; border:2px solid #e2f6d9; border-radius:7px; padding:0.65rem 0.9rem; background:#fafdff; font-size:1.04rem; transition:border 0.16s;}
+    .input-field{
+      width:100%; 
+      border:2px solid #e2f6d9; 
+      border-radius:7px; 
+      padding:0.9rem 1.1rem; 
+      background:#fafdff; 
+      font-size:1.11rem; 
+      transition:border 0.16s;
+    }
     .input-field:focus { border-color: var(--accent);}
     .form-link{ display:block; color:var(--pink); text-decoration:underline; cursor:pointer; margin:0.99rem 0 0 0; font-size:0.97rem; }
     .form-link:hover{ color:var(--orange);}
     .error-note{ color:#e80e41; font-size:1.03rem; margin-bottom:0.7rem;}
     .success-note{ color:#05a24c; font-size:1.02rem; margin-bottom:0.7rem;}
-
-    @keyframes popfade {
-      from { opacity: 0; transform:scale(0.93) translateY(12px);}
-      to { opacity: 1; transform:scale(1) translateY(0);}
-    }
-    @keyframes fadein {
-      from { opacity:0;}
-      to   { opacity:1;}
-    }
-    @keyframes bouncein {
-      0% {opacity:0; transform:scale(0.85) translateY(36px);}
-      90% {opacity:1; transform:scale(1.04) translateY(-2px);}
-      100% {opacity:1; transform:scale(1) translateY(0);}
-    }
+    @keyframes popfade { from { opacity: 0; transform:scale(0.93) translateY(12px);} to { opacity: 1; transform:scale(1) translateY(0);} }
+    @keyframes fadein { from { opacity:0;} to   { opacity:1;} }
+    @keyframes bouncein { 0% {opacity:0; transform:scale(0.85) translateY(36px);} 90% {opacity:1; transform:scale(1.04) translateY(-2px);} 100% {opacity:1; transform:scale(1) translateY(0);} }
     @media (max-width:680px){
       .dashboard-grid{ gap: 1.1rem; }
       #sideMenu { width:170px; min-width:120px; padding-top:28px; }
       .menu-item { padding:13px 10px; font-size:0.97em;}
+      .modal-dialog { max-width: 99vw; min-width: 0; padding: 1.2rem 1rem 0.9rem 1rem;}
     }
   </style>
 </head>
