--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
       justify-content: center;
       animation: fadein 0.44s cubic-bezier(0.56,2,0.38,1) both;
     }
-    /* BIGGER ROOMIER MODAL DIALOG! */
     .modal-dialog {
       background: #fff;
       border-radius: 18px;
@@ -199,10 +198,11 @@
     .modal-title {
       color: var(--accent-dark);
       font-weight: 700;
-      font-size: 1.32rem;
+      font-size: 1.37rem;
       margin-bottom: 1.2rem;
       letter-spacing: 1.6px;
       line-height: 1.3;
+      text-align: center;
     }
     .lang-btn, .action-btn {
       margin: 0.8rem 0.5rem 0 0.5rem;
@@ -218,20 +218,43 @@
       box-shadow: 0 2px 10px #f9ac1d10;
     }
     .lang-btn:hover, .action-btn:hover { background: linear-gradient(90deg,var(--accent),var(--orange)); transform: scale(1.06);}
-    /* BIGGER INPUT FIELDS! */
-    .input-row{margin-bottom:1.1rem; text-align:left;}
-    .input-label{display:block; margin-bottom:0.43rem; color:var(--accent-dark); font-weight:600;}
+    /* FORM & INPUT CENTERING */
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+    .input-row{
+      margin-bottom: 1.1rem;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .input-label{
+      display: block;
+      margin-bottom: 0.43rem;
+      color: var(--accent-dark);
+      font-weight: 600;
+      text-align: center;
+      width: 100%;
+    }
     .input-field{
-      width:100%;
-      border:2px solid #e2f6d9;
-      border-radius:9px;
-      padding:1.2rem 1.2rem;
-      background:#fafdff;
-      font-size:1.22rem;
-      transition:border 0.16s;
+      width: 100%;
+      max-width: 340px;
+      border: 2px solid #e2f6d9;
+      border-radius: 9px;
+      padding: 1.2rem 1.2rem;
+      background: #fafdff;
+      font-size: 1.22rem;
+      transition: border 0.16s;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
     .input-field:focus { border-color: var(--accent);}
-    .form-link{ display:block; color:var(--pink); text-decoration:underline; cursor:pointer; margin:0.99rem 0 0 0; font-size:0.97rem; }
+    .form-link{ display:block; color:var(--pink); text-decoration:underline; cursor:pointer; margin:0.99rem 0 0 0; font-size:0.97rem; text-align:center;}
     .form-link:hover{ color:var(--orange);}
     .error-note{ color:#e80e41; font-size:1.03rem; margin-bottom:0.7rem;}
     .success-note{ color:#05a24c; font-size:1.02rem; margin-bottom:0.7rem;}
