--- a/index.html
+++ b/index.html
@@ -12,11 +12,130 @@
       background: #f8f9fc;
       color: #333;
     }
-    h1 {
-      text-align: center;
-      padding: 20px;
-      font-weight: 600;
+
+    /* ===== POPUPS ===== */
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 3000;
     }
+    .popup {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      width: 320px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+    }
+    .popup h3 { margin-bottom: 15px; }
+    .popup input, .popup select {
+      width: 90%;
+      padding: 10px;
+      margin: 6px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    .popup button {
+      margin: 8px;
+      padding: 10px 20px;
+      border: none;
+      background: #4CAF50;
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .hidden { display: none; }
+
+    /* ===== NAVBAR ===== */
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #2c3e50;
+      color: white;
+      padding: 10px 20px;
+    }
+    .navbar .logo {
+      font-weight: 600;
+      font-size: 1.2rem;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+    .navbar .time {
+      font-size: 0.9rem;
+    }
+
+    /* ===== SIDEBAR ===== */
+    .sidebar {
+      position: fixed;
+      left: -220px;
+      top: 0;
+      width: 200px;
+      height: 100%;
+      background: #34495e;
+      color: white;
+      padding-top: 60px;
+      transition: 0.3s;
+      z-index: 2000;
+    }
+    .sidebar a {
+      display: block;
+      padding: 12px;
+      text-decoration: none;
+      color: white;
+    }
+    .sidebar a:hover { background: #2c3e50; }
+    .menu-btn {
+      font-size: 1.5rem;
+      cursor: pointer;
+      margin-right: 20px;
+    }
+
+    /* ===== PLACEHOLDER BAR ===== */
+    .placeholder-bar {
+      background: #ddd;
+      height: 40px;
+      margin: 0;
+    }
+
+    /* ===== TWO BLOCKS ===== */
+    .two-blocks {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+      padding: 20px;
+    }
+    .block {
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    .news {
+      height: 150px;
+      overflow: hidden;
+      position: relative;
+    }
+    .news ul {
+      position: absolute;
+      animation: scrollNews 8s linear infinite;
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+    .news li { padding: 5px 0; }
+    @keyframes scrollNews {
+      0% { top: 100%; }
+      100% { top: -100%; }
+    }
+
+    /* ===== DASHBOARD CARDS ===== */
     .card-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -30,9 +149,9 @@
       justify-content: flex-start;
       padding: 20px;
       border-radius: 14px;
-      background: white;
       text-decoration: none;
       color: inherit;
+      background: white;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
@@ -56,20 +175,76 @@
       text-align: center;
     }
 
-    /* Themed colors */
+    /* Themed backgrounds */
     .seeds { background: #eaf9f0; }
     .schemes { background: #fdf3e7; }
     .weather { background: #eaf3fc; }
     .calendar { background: #f4ecf9; }
     .fertilizer { background: #f9fce7; }
-    .stubble { background: #fff2e7; }
     .soil { background: #f2f2f2; }
-    .msp { background: #e7f9f9; }
-    .yield { background: #f9e7f7; }
   </style>
 </head>
 <body>
-  <h1>🌾 SIH Smart Agriculture Dashboard</h1>
+
+  <!-- ===== LANGUAGE POPUP ===== -->
+  <div id="languagePopup" class="overlay">
+    <div class="popup">
+      <h3>Select Language</h3>
+      <button onclick="chooseLang('English')">English</button>
+      <button onclick="chooseLang('Hindi')">हिंदी</button>
+      <button onclick="chooseLang('Punjabi')">ਪੰਜਾਬੀ</button>
+    </div>
+  </div>
+
+  <!-- ===== LOGIN / REGISTER POPUP ===== -->
+  <div id="authPopup" class="overlay hidden">
+    <div class="popup">
+      <h3 id="authTitle">Login</h3>
+      <input type="text" id="username" placeholder="Name" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <input type="password" id="password2" placeholder="Confirm Password" class="hidden">
+      <input type="number" id="landSize" placeholder="Land Size (acres)" class="hidden">
+      <input type="text" id="cropType" placeholder="Crop Type" class="hidden">
+      <button onclick="login()">Login</button>
+      <button onclick="toggleRegister()">Register</button>
+    </div>
+  </div>
+
+  <!-- ===== SIDEBAR ===== -->
+  <div id="sidebar" class="sidebar">
+    <a href="#">About Us</a>
+    <a href="#">MSP</a>
+    <a href="#">Yield Comparison</a>
+  </div>
+
+  <!-- ===== NAVBAR ===== -->
+  <div class="navbar">
+    <span class="menu-btn" onclick="toggleSidebar()">☰</span>
+    <div class="logo">🌾 Solutioneers</div>
+    <div class="time" id="timeDisplay"></div>
+  </div>
+
+  <!-- ===== PLACEHOLDER BAR ===== -->
+  <div class="placeholder-bar"></div>
+
+  <!-- ===== TWO BLOCKS ===== -->
+  <div class="two-blocks">
+    <div class="block">
+      <h3>About Solutioneers</h3>
+      <p>Content coming soon...</p>
+    </div>
+    <div class="block news">
+      <h3>Latest Updates</h3>
+      <ul>
+        <li>New crop insurance policy released.</li>
+        <li>MSP for wheat increased by 4%.</li>
+        <li>Heavy rainfall expected this week.</li>
+        <li>Training sessions for farmers announced.</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- ===== DASHBOARD CARDS ===== -->
   <div class="card-grid">
     <a href="seeds.html" class="card seeds">
       <div class="card-icon">🌱</div>
@@ -79,12 +254,12 @@
     <a href="schemes.html" class="card schemes">
       <div class="card-icon">📜</div>
       <div class="card-title">Govt Schemes</div>
-      <div class="card-desc">Explore latest agriculture policies & subsidies.</div>
+      <div class="card-desc">Explore agriculture policies & subsidies.</div>
     </a>
     <a href="weather.html" class="card weather">
       <div class="card-icon">☁️</div>
       <div class="card-title">Weather Forecast</div>
-      <div class="card-desc">Stay updated with 7-day forecasts for your area.</div>
+      <div class="card-desc">Stay updated with 7-day forecasts.</div>
     </a>
     <a href="calendar.html" class="card calendar">
       <div class="card-icon">📅</div>
@@ -94,28 +269,79 @@
     <a href="fertilizer.html" class="card fertilizer">
       <div class="card-icon">🪴</div>
       <div class="card-title">Fertilizer Advisory</div>
-      <div class="card-desc">Get pest control & fertilizer recommendations.</div>
-    </a>
-    <a href="stubble.html" class="card stubble">
-      <div class="card-icon">🔥</div>
-      <div class="card-title">Stubble Alternatives</div>
-      <div class="card-desc">Eco-friendly solutions for stubble management.</div>
+      <div class="card-desc">Get pest & fertilizer recommendations.</div>
     </a>
     <a href="soil.html" class="card soil">
       <div class="card-icon">🌍</div>
       <div class="card-title">Soil Health</div>
-      <div class="card-desc">Check soil quality & improvement methods.</div>
-    </a>
-    <a href="msp.html" class="card msp">
-      <div class="card-icon">💰</div>
-      <div class="card-title">MSP & Market Rates</div>
-      <div class="card-desc">Latest MSP rates & eNAM updates.</div>
-    </a>
-    <a href="yield.html" class="card yield">
-      <div class="card-icon">📊</div>
-      <div class="card-title">Yield Comparison</div>
-      <div class="card-desc">Compare crop yields across regions.</div>
+      <div class="card-desc">Check soil quality & improvements.</div>
     </a>
   </div>
+
+  <script>
+    // ===== LANGUAGE POPUP =====
+    function chooseLang(lang) {
+      document.getElementById("languagePopup").style.display = "none";
+      document.getElementById("authPopup").classList.remove("hidden");
+    }
+
+    // ===== LOGIN / REGISTER =====
+    let isRegister = false;
+    function toggleRegister() {
+      isRegister = !isRegister;
+      document.getElementById("authTitle").innerText = isRegister ? "Register" : "Login";
+      document.getElementById("password2").classList.toggle("hidden", !isRegister);
+      document.getElementById("landSize").classList.toggle("hidden", !isRegister);
+      document.getElementById("cropType").classList.toggle("hidden", !isRegister);
+    }
+
+    function login() {
+      let user = document.getElementById("username").value;
+      let pass = document.getElementById("password").value;
+
+      if (isRegister) {
+        let pass2 = document.getElementById("password2").value;
+        let land = document.getElementById("landSize").value;
+        let crop = document.getElementById("cropType").value;
+        if (!user || !pass || !pass2 || !land || !crop) {
+          alert("Please fill all fields!");
+          return;
+        }
+        if (pass !== pass2) {
+          alert("Passwords do not match!");
+          return;
+        }
+        localStorage.setItem("solutioneersUser", JSON.stringify({ user, pass, land, crop }));
+        alert("Account created! Please login.");
+        toggleRegister();
+        return;
+      } else {
+        let saved = JSON.parse(localStorage.getItem("solutioneersUser"));
+        if (!saved || saved.user !== user || saved.pass !== pass) {
+          alert("Invalid credentials or account not found!");
+          return;
+        }
+        document.getElementById("authPopup").classList.add("hidden");
+        alert("Welcome " + saved.user + "!");
+      }
+    }
+
+    // ===== SIDEBAR =====
+    function toggleSidebar() {
+      let sidebar = document.getElementById("sidebar");
+      sidebar.style.left = sidebar.style.left === "0px" ? "-220px" : "0px";
+    }
+
+    // ===== TIME =====
+    function updateTime() {
+      let now = new Date();
+      let options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+      let timeStr = now.toLocaleTimeString("en-IN", { hour: '2-digit', minute: '2-digit', second: '2-digit' });
+      document.getElementById("timeDisplay").innerText =
+        timeStr + " | " + now.toLocaleDateString("en-IN", options);
+    }
+    setInterval(updateTime, 1000);
+    updateTime();
+  </script>
 </body>
 </html>
